--- a/notebooks/Data Generation.ipynb
+++ b/notebooks/Data Generation.ipynb
@@ -79,22 +79,7 @@
    "id": "b3ec25dd",
    "metadata": {},
    "source": [
-    "# Naive bayes\n",
-    "In normal Bayes rule, the joint distribution represents all features occurring together given the class, but the hidden depdencies between features are usually difficult to compute. Therefore, we use Naive bayes to simplify the model by assuming all features are conditionally independent, meaning knowing one feature will not give any inofrmation about any other features. This is formalized by\n",
-    "\n",
-    "$$P(x|y) = P(x_1, x_2, \\dots, x_n | y) = \\Pi_{i=1}^{n}P(x_i | y)$$\n",
-    "\n",
-    "This is a huge assumption as the features are pretty much nenver independent in reality.\n",
-    "\n",
-    "Ususally, naive bayes can be used as a statistical method so that it learns the distribution of data through counting. This is fast but rather unreliable way of learning.\n",
-    "\n",
-    "### Example\n",
-    "For a binary classification problem with the dataset $({x_1, x_2}, y)$, we want to make classification given a new sample, which is $P(y| x_1=a, x_2=b)$\n",
-    "...\n",
-    "\n",
-    "\n",
     "# Naive Bayes\n",
-    "\n",
     "In the standard application of Bayes' rule, the likelihood term $P(x_1, x_2, \\dots, x_n | y)$ represents the joint probability of all features occurring together given the class. Computing this is difficult because features often have complex correlations (dependencies), requiring a massive amount of data to model accurately.\n",
     "\n",
     "Therefore, Naive Bayes simplifies the model by introducing the assumption of conditional independence. This assumes that, *given the class label*, knowing the value of one feature provides no information about the value of any other feature.\n",
@@ -107,7 +92,7 @@
     "\n",
     "$$P(y|x) \\propto P(y) \\cdot \\prod_{i=1}^{n}P(x_i | y)$$\n",
     "\n",
-    "Note on Reality: This is a strong, naive assumption because real-world features are rarely independent. However, despite this theoretical flaw, Naive Bayes is computationally efficient and often performs surprisingly well as a baseline classifier. While its probability estimates might be inaccurate due to the assumption, its classification decisions are often correct.\n",
+    "Note: This is a strong, naive assumption because real-world features are rarely independent. However, despite this theoretical flaw, Naive Bayes is computationally efficient and often performs surprisingly well as a baseline classifier. While its probability estimates might be inaccurate due to the assumption, its classification decisions are often correct.\n",
     "\n",
     "### Example\n",
     "**Scenario:**\n",
@@ -145,9 +130,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "41c9faa2",
+   "metadata": {},
+   "source": [
+    "# Maximum Likelihood Estimation (MLE)\n",
+    "\n",
+    "In the context of generative modeling, our goal is to approximate an unknown underlying data distribution $P_{data}(\\mathbf{x})$ using a parametric model $P_{\\theta}(\\mathbf{x})$, where $\\theta$ represents the model parameters.\n",
+    "\n",
+    "### Definition of Likelihood\n",
+    "Before defining the estimator, we must define the **Likelihood Function**. Given a set of observed data, the likelihood function $\\mathcal{L}(\\theta)$ measures how well a model (specific parameter set $\\theta$) explains the observed data.\n",
+    "\n",
+    "> **Definition:** Let $\\mathcal{D} = \\{\\mathbf{x}^{(1)}, \\mathbf{x}^{(2)}, \\dots, \\mathbf{x}^{(n)}\\}$ be a dataset. The likelihood function $L(\\theta; \\mathcal{D})$ is defined as the joint probability (or joint density) of the observed data viewed as a function of the parameters $\\theta$, which is the probablity of observing all data samples together based on the given model:\n",
+    "> $$L(\\theta; \\mathcal{D}) = P(\\mathbf{x}^{(1)}, \\mathbf{x}^{(2)}, \\dots, \\mathbf{x}^{(n)} | \\theta)$$\n",
+    "\n",
+    "To make the computation of the joint probability tractable, we typically assume the data points are **independent and identically distributed (i.i.d.)**. Under this assumption, we treat each sample individually, so the joint probability factorizes into the product of marginal probabilities:\n",
+    "$$L(\\theta; \\mathcal{D}) = \\prod_{i=1}^{n} P_{\\theta}(\\mathbf{x}^{(i)})$$\n",
+    "\n",
+    "## Log-Likelihood\n",
+    "In practice, we work with the **Log-Likelihood** $\\ell(\\theta)$ because the product of many small probabilities leads to numerical underflow. Since the logarithm is a monotonically increasing function, maximizing the likelihood is equivalent to maximizing the log-likelihood:\n",
+    "$$\\ell(\\theta) = \\log \\left( \\prod_{i=1}^{n} P_{\\theta}(\\mathbf{x}^{(i)}) \\right) = \\sum_{i=1}^{n} \\log P_{\\theta}(\\mathbf{x}^{(i)})$$\n",
+    "\n",
+    "## MLE Intuition\n",
+    "The data-space for high-dimensional inputs (e.g., $1024 \\times 1024$ RGB images) is unimaginably vast, with dimensions in the millions. However, meaningful data (like images of cats) does not exist uniformly across this space; instead, it concentrates on a low-dimensional subset called a **manifold**. \n",
+    "\n",
+    "The intuition behind MLE is built on two observations:\n",
+    "1.  **Sparsity of Observations:** Out of all possible configurations in the high-dimensional space, our collected samples $\\mathcal{D}$ represent the \"realized\" events. Because these specific points were observed, they must have a high density under the true probability distribution $P_{data}$.\n",
+    "2.  **The Optimization Goal:** We want our model $P_{\\theta}$ to mimic this true distribution. We achieve this by adjusting the parameters $\\theta$ so that the model \"shifts\" its probability mass away from the \"empty\" noise regions and concentrates it on the specific coordinates of our observed samples.\n",
+    "\n",
+    "For example, in a dataset of cat images, the model should learn that a specific arrangement of pixels forming a \"cat\" is highly probable, while a random arrangement of \"static\" noise, despite being in the same high-dimensional pixel space, has a probability near zero.\n",
+    "\n",
+    "Therefore, the training objective is to find the best model that assigns the highest possible probability to the observed data (the dataset). In other words, it maximize the likelihood or log-likelihood of the observed data.\n",
+    "\n",
+    "$$\\theta_{MLE} = \\arg \\max_{\\theta} \\sum_{i=1}^{n} \\log P_{\\theta}(\\mathbf{x}^{(i)})$$\n",
+    "\n",
+    "\n",
+    "# Kullback-Leibler (KL) Divergence\n",
+    "The KL Divergence is a measure of how one probability distribution $Q$ diverges from a second, reference probability distribution $P$. In machine learning, we often use it to measure the distance between the true data distribution $P_{data}$ and our model $P_{\\theta}$.\n",
+    "\n",
+    "> **Definition:** For two distributions $P$ and $Q$ defined on the same probability space, the KL Divergence is defined as:\n",
+    "> $$D_{KL}(P \\parallel Q) = \\int_{-\\infty}^{\\infty} p(x) \\log \\frac{p(x)}{q(x)} dx$$\n",
+    "> Or in expectation form:\n",
+    "> $$D_{KL}(P \\parallel Q) = \\mathbb{E}_{x \\sim P} \\left[ \\log \\frac{P(x)}{Q(x)} \\right] = \\mathbb{E}_{x \\sim P} [\\log P(x) - \\log Q(x)]$$\n",
+    "\n",
+    "## Properties\n",
+    "1.  **Distance**: The more different the two distributions are, the larger the divergence will be.\n",
+    "1.  **Identity:** $D_{KL}(P \\parallel P) = 0$. A distribution has zero divergence from itself because they are the exact same.\n",
+    "2.  **Non-negativity:** $D_{KL}(P \\parallel Q) \\geq 0$ for any $P, Q$ (via Jensen's Inequality).\n",
+    "3.  **Asymmetry:** $D_{KL}(P \\parallel Q) \\neq D_{KL}(Q \\parallel P)$.\n",
+    "\n",
+    "## MLE as Divergence Minimization\n",
+    "In generative models, the objective is the minimize the divergence between the true data distribution $P_{data}$ and our model $P_{\\theta}$ so that the model provides a good approximation for the true distribution. We show that the objective of minimizing the KL divergence is eqavelent to maximizing the likelihood. \n",
+    "\n",
+    "## The Mathematical Equivalence\n",
+    "We can prove that minimizing the KL divergence between the data and the model is mathematically equivalent to maximizing the log-likelihood of the dataset.\n",
+    "\n",
+    "Given the definition of KL Divergence:\n",
+    "$$D_{KL}(P_{data} \\parallel P_{\\theta}) = \\mathbb{E}_{\\mathbf{x} \\sim P_{data}} [\\log P_{data}(\\mathbf{x}) - \\log P_{\\theta}(\\mathbf{x})]$$\n",
+    "\n",
+    "Using the linearity of expectation, we can split this into two distinct terms:\n",
+    "$$D_{KL}(P_{data} \\parallel P_{\\theta}) = \\underbrace{\\mathbb{E}_{\\mathbf{x} \\sim P_{data}} [\\log P_{data}(\\mathbf{x})]}_{\\text{Negative Entropy } -H(P_{data})} - \\underbrace{\\mathbb{E}_{\\mathbf{x} \\sim P_{data}} [\\log P_{\\theta}(\\mathbf{x})]}_{\\text{Cross-Entropy Term}}$$\n",
+    "\n",
+    "When we minimizing the divergence with respect to the model parameters $\\theta$, we notice the following:\n",
+    "* **The Entropy Term:** $\\mathbb{E}_{\\mathbf{x} \\sim P_{data}} [\\log P_{data}(\\mathbf{x})]$ depends only on the true data. It is a constant with respect to $\\theta$ and does not change during training.\n",
+    "* **The Empirical Estimate:** Since we don't know $P_{data}$ exactly, we estimate the second term using our samples $\\mathcal{D}$ because we know the data points are sampled from the true distribution:\n",
+    "    $$\\mathbb{E}_{\\mathbf{x} \\sim P_{data}} [\\log P_{\\theta}(\\mathbf{x})] \\approx \\frac{1}{n} \\sum_{i=1}^{n} \\log P_{\\theta}(\\mathbf{x}^{(i)})$$\n",
+    "\n",
+    "Therefore, minimizing the divergence is equivalent to maximizing the average log-likelihood:\n",
+    "$$\\arg \\min_{\\theta} D_{KL}(P_{data} \\parallel P_{\\theta}) = \\arg \\max_{\\theta} \\sum_{i=1}^{n} \\log P_{\\theta}(\\mathbf{x}^{(i)})$$\n",
+    "\n",
+    "## The Lower Bound (Data Entropy)\n",
+    "Note that even in a \"perfect\" training scenario where the model perfectly matches the empirical data, the log-likelihood does not necessarily reach zero. It is bounded by the **Entropy of the data**, $H(P_{data})$. This represents the inherent \"noise\" or uncertainty in the data that no model can eliminate."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40b19145",
+   "id": "96176061",
    "metadata": {},
    "outputs": [],
    "source": []
