RL: refine function approximation algo

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -957,7 +957,7 @@
     "\n",
     "Because SARSA uses $A_{t+1}$ from the current policy, it learns the value of the policy as it is being followed (on-policy learning). After each update, the policy can be improved by making it greedy or $\\epsilon$-greedy with respect to the updated $q(s, a)$.\n",
     "\n",
-    "For the estimation return, SARSA uses $R_{t+1} + \\gamma \\, q(S_{t+1}, A_{t+1})$ instead of $R_{t+1} + \\gamma \\, v(S_{t+1})$ because $q(S_{t+1}, A_{t+1})$ is a random sample of the average return By the law of large numbers, if we sample from the policy enough times, the average of your updates will converge to the true $v(s)$\n",
+    "For the estimation return, SARSA uses $R_{t+1} + \\gamma \\, q(S_{t+1}, A_{t+1})$ instead of $R_{t+1} + \\gamma \\, v(S_{t+1})$ because $q(S_{t+1}, A_{t+1})$ is a random sample of the average return By the law of large numbers, if we sample from the policy enough times, the average of your updates will converge to the true value for $v(s)$.\n",
     "\n",
     "### SARSA Algorithm\n",
     "1. Given:\n",
@@ -1431,7 +1431,9 @@
     "* $\\nabla \\hat{q}(S_t, A_t; \\mathbf{w}_t)$ is the gradient of the value function with respect to the weights.\n",
     "* $G_t$ is the **target** value. Since the true value $q_{\\pi}$ is unknown, we substitute it with a bootstrapping estimate:\n",
     "    * **For SARSA (TD):** $G_t = R_{t+1} + \\gamma \\hat{q}(S_{t+1}, A_{t+1}; \\mathbf{w}_t)$\n",
-    "    * **For Q-Learning:** $G_t = R_{t+1} + \\gamma \\max_{a} \\hat{q}(S_{t+1}, a; \\mathbf{w}_t)$"
+    "    * **For Q-Learning:** $G_t = R_{t+1} + \\gamma \\max_{a} \\hat{q}(S_{t+1}, a; \\mathbf{w}_t)$\n",
+    "    \n",
+    "The network for predicting the action-value is called the deep Q network (DQN)."
    ]
   },
   {
@@ -1551,6 +1553,14 @@
     "$$w \\leftarrow w + \\alpha \\big[ R_{t+1} + \\gamma \\hat{q}(S_{t+1}, A_{t+1}; w) - \\hat{q}(S_t, A_t; w) \\big] \\nabla_w \\hat{q}(S_t, A_t; w)$$\n",
     "\n",
     "For a fixed policy, this method converges in the same way as TD(0).\n",
+    "\n",
+    "In this architecture, instead of taking both the state and action $(s, a)$ as inputs to output a single action value for that particular state-action pair, the network is designed to accept only the state $s$ as input. It then outputs a vector containing the action-values $q(s, a)$ for *every* possible action simultaneously.\n",
+    "\n",
+    "This structure allows us to retrieve all Q-values for a given state in a single forward pass, making it computationally efficient to calculate $\\max_{a} q(s, a)$ for Q-learning or to derive an $\\epsilon$-greedy policy.\n",
+    "\n",
+    "However, this approach is strictly limited to **discrete action spaces**. It cannot be used for continuous action spaces, where the number of possible actions is infinite. For continuous control tasks, we must use alternative methods, such as discretizing the action space or employing Actor-Critic algorithms.\n",
+    "\n",
+    "<img src=\"https://cdn.prod.website-files.com/64c83cc4e824393ef4e8c4d0/667f20fed58bea3843bc341e_1*wfKvMsVMkUhEGz1YH7kCQA.png\" width=500>\n",
     "\n",
     "\n",
     "### Episodic Semi-Gradient SARSA Algorithm\n",
