RL: added experience reply

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1562,6 +1562,8 @@
     "\n",
     "<img src=\"https://cdn.prod.website-files.com/64c83cc4e824393ef4e8c4d0/667f20fed58bea3843bc341e_1*wfKvMsVMkUhEGz1YH7kCQA.png\" width=500>\n",
     "\n",
+    "Note: the policy update step is usually not included in the actual implementation because after the action-value function is updated, in the next iteration, we can simply plug in the current state to retrive all possible action values and select action with $\\epsilon$-greedy.\n",
+    "\n",
     "\n",
     "### Episodic Semi-Gradient SARSA Algorithm\n",
     "\n",
@@ -1602,12 +1604,65 @@
     "\n",
     "$$w \\leftarrow w + \\alpha \\big[ R_{t+1} + \\gamma \\sum_{a'} \\pi(a'|S_{t+1}) \\hat{q}(S_{t+1}, a'; w) - \\hat{q}(S_t, A_t; w) \\big] \\nabla_w \\hat{q}(S_t, A_t; w)$$\n",
     "\n",
-    "## Systematic Exploration In Functional Approximation\n",
-    "Systematic exploration is critical in functional approximation as it forces the agent to explore and therefore obtain a better knowledge of the full environment. One way of encouraging systematic exploration is through optimisic initialization, which is done by initializing all the estimated state-values or action values to be higher than the actual ones. Similar to the tabular case, this makes the agent optimistic about all the states or state-action pairs so it will explore them in the beginning and gradually update the estimation to it's true values. However, this is not as simple as the tabular case due to two issues.\n",
-    "1. We can only intiailize our optimistic initial values by initializing the weights $w$ of the function approximator. However in if the function approximator is a complex, non-linear function, like a neural network. We cannot gaurenteen that we can initialize the weights so the predicted value is always optimistic for all possible inputs\n",
-    "2. Function approximation uses generalization for faster learning, but it also causes problems for exploration because the agent can think optimistically for one states and visit it and updates its estimation based on the observed return and transitions. However, the nearby states' values will also be updated due to the generalization, and therefore their updated values may not be optimistic any more although the state itself is not yet visited.\n",
+    "## Experience Reply\n",
+    "In vallina DQN, there are two problems\n",
+    "1. sample inefficient\n",
+    "2. close by samples (states are close) have high correlation. we want more diverse samples\n",
     "\n",
-    "$\\epsilon$-greedy is another way that enforces exploration since the agent is foreced to taken a random choice of action from time to time. $\\epsilon$-greedy works for all cases of function approximation because it only depends on the final estimated values from the function approximator and therefore not impacted by generalization. However, the issue with $\\epsilon$-greedy is that its exploration purely depends on randomness, which is not systematic.\n",
+    "Experience reply solves the problem by storing previous examples and reuse it.\n",
+    "\n",
+    "sample construction and converting into a supervised learning problem\n",
+    "\n",
+    "still online algorithm. update the network after each step\n",
+    "\n",
+    "off policy nature\n",
+    "\n",
+    "initial sample collection phase\n",
+    "\n",
+    "## Experience Replay in Deep Q-Networks (DQN)\n",
+    "\n",
+    "In vanilla Deep Q-Learning, training a neural network directly on the stream of experiences as they occur introduces two significant problems: **sample inefficiency** and **data correlation**. When an agent learns sequentially from the environment (i.e., receives $(S_t, A_t, R_{t+1}, S_{t+1})$, updates immediately, and discards the data), two issues arise:\n",
+    "\n",
+    "1. **Sample Inefficiency**: an agent learns from a sample once and then discards it, which wastes valuable information. \n",
+    "\n",
+    "2. **High Correlation**: In a continuous episode, successive states are highly correlated. If we train the network on these sequential samples, the gradient updates will consistently push the weights in the same direction for long periods. This causes the network to **overfit** to the current local situation, and the samples are not diverse enough.\n",
+    "\n",
+    "Experience Replay addresses these problems by decoupling **data collection** from **training**. Instead of learning from the current moment, the agent stores the past samples and will reuse them for training in the future.\n",
+    "\n",
+    "### Mechanism\n",
+    "To implement experience reply, the agent maintains a **Replay Buffer** $\\mathcal{D}$ (a fixed-size queue, e.g., size $10^6$) that stores the past experiences instead of discards them immediately after use.\n",
+    "1.  **Store:** As the agent interacts with the environment, every transition is stored in the buffer as a tuple:\n",
+    "    $$e_t = (S_t, A_t, R_{t+1}, S_{t+1}, \\text{Done})$$\n",
+    "2.  **Training:** To training the Q-network, we add the current transition into the buffer and sample a **random minibatch** of $N$ past transitions uniformly from $\\mathcal{D}$.\n",
+    "    $$(S, A, R, S') \\sim U(\\mathcal{D})$$\n",
+    "\n",
+    "By sampling from the buffer, we effectively convert the unstable RL problem into a standard Supervised Learning task.\n",
+    "* **Inputs:** The batch of States $S$.\n",
+    "* **Targets:** The calculated TD Targets ($y_i = R + \\gamma \\max_{a'} q(S', a'; w)$).\n",
+    "* **Update:** We update the network's parameters $w$ by minimizing the MSE loss over a random mini-batch of $N$ transitions. We calculate the gradient of the loss for each sample in the batch, average them to ensure a stable direction, and perform a Stochastic Gradient Descent (SGD) step.\n",
+    "\n",
+    "$$\n",
+    "w \\leftarrow w + \\alpha \\cdot \\frac{1}{N} \\sum_{i=1}^{N} \\left( \\underbrace{y_i - q(S_i, A_i; w)}_{\\text{TD Error } \\delta_i} \\right) \\nabla_{w} q(S_i, A_i; w)\n",
+    "$$\n",
+    "\n",
+    "Where:\n",
+    "* $\\alpha$ is the learning rate.\n",
+    "* $N$ is the batch size.\n",
+    "* $y_i$ is the target value: $y_i = R_{i+1} + \\gamma \\max_{a'} q(S'_{i+1}, a'; w)$.\n",
+    "* $\\nabla_{w} q(S_i, A_i; w)$ is the gradient of the Q-value with respect to the weights.\n",
+    "\n",
+    "Despite using past samples, DQN with Experience Replay is technically an **Online Off-Policy** algorithm.\n",
+    "* **Online:** The agent is interacting with the environment and updating its policy *during* the episode. The algorithm typically alternates between interacting with the environment and training: take one step in the world, then perform one gradient update.\n",
+    "* **Off-Policy:** The data in the buffer was generated by older versions of the policy (the behavior policy $b$), while the network is trying to learn the optimal greedy policy $\\pi^*$ (the target policy). This discrepancy is allowed because Q-Learning is an off-policy algorithm (it uses $R + \\gamma \\max Q$, which does not depend on the actual action taken in the next state).\n",
+    "\n",
+    "At the very beginning of training ($t=0$), the replay buffer is empty. We cannot sample a batch to train the network.\n",
+    "* **Solution:** We implement a **\"Learning Starts\"** phase (e.g., first 1,000 steps).\n",
+    "* **Action:** The agent acts purely randomly to populate the buffer with diverse initial data.\n",
+    "* **Training:** No gradient updates occur during this phase. Training commences only once `buffer_size > batch_size`.\n",
+    "\n",
+    "### Summary of Benefits\n",
+    "1.  **Data Efficiency:** Experience Replay allows each transition to be reused in multiple updates, allowing the agent to learn more than once from the each sample.\n",
+    "2.  **Stability (Correlation Breaking):** By sampling a random minibatch, we obtained diverse samples with in batch, breaking the temporal correlation between samples. The resulting gradient is an **average** over many diverse samples, pointing in a direction that improves the policy globally rather than just locally.\n",
     "\n",
     "## Systematic Exploration in Function Approximation\n",
     "Systematic exploration is critical in reinforcement learning with function approximation because it ensures that the agent explores different parts of the environment instead of getting stuck in a small subset of states or actions. This broader exploration helps the agent build a more accurate understanding of the environment and improves the quality of the learned policy.\n",
