--- a/notebooks/CNN.ipynb
+++ b/notebooks/CNN.ipynb
@@ -476,9 +476,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -490,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
