--- a/notebooks/Explicit Distribution Learning.ipynb
+++ b/notebooks/Explicit Distribution Learning.ipynb
@@ -199,7 +199,7 @@
     "Therefore, minimizing the divergence is equivalent to maximizing the average log-likelihood:\n",
     "$$\\arg \\min_{\\theta} D_{KL}(P_{data} \\parallel P_{\\theta}) = \\arg \\max_{\\theta} \\sum_{i=1}^{n} \\log P_{\\theta}(\\mathbf{x}^{(i)})$$\n",
     "\n",
-    "Here, we assume each of our $n$ samples was sampled uniformly from the distribution, meaning each has a probability mass of $1/n$. However, the true probablity is not necessarily $1/n$ for each individual sample, making the entire objective of MLE or minimizing KL divergence only an estimate.\n",
+    "Here, we assume each of our $n$ samples was sampled uniformly from the distribution, meaning each has a probability mass of $1/n$. However, the true probability is not necessarily $1/n$ for each individual sample, making the entire objective of MLE or minimizing KL divergence only an estimate.\n",
     "\n",
     "## The Lower Bound (Data Entropy)\n",
     "Note that even in a \"perfect\" training scenario where the model perfectly matches the empirical data, the log-likelihood does not necessarily reach zero. It is bounded by the **Entropy of the data**, $H(P_{data})$. This represents the inherent \"noise\" or uncertainty in the data that no model can eliminate."
@@ -210,12 +210,6 @@
    "id": "b9e55612",
    "metadata": {},
    "source": [
-    " # Explicit Distribution Learning\n",
-    "Explicit distribution learning means that we learn the distribution and have a clear expression for it (through a neural network). Clearly, modeling data distribution as a whole is computationally infeasible because the model needs to cover an exponentially large data-space and direct sampling could be exponentially hard. Therefore, we use methods like MLE and minimizing KL divergence to estimate the distribution. The objective can be achieved through 3 different modelling apporaches\n",
-    "1. Autoregressive Modelling\n",
-    "2. Energy-based Modeling\n",
-    "3. Flow-based Modeling\n",
-    "\n",
     "# Explicit Distribution Learning\n",
     "Explicit distribution learning involves the construction of a generative model that provides an explicit functional form for the probability density function (or mass function), denoted as $p_{\\theta}(\\mathbf{x})$. Unlike implicit models (e.g., GANs), which only provide a mechanism to sample data, explicit models allow for the direct evaluation of the likelihood of a given observation.\n",
     "\n",
@@ -274,9 +268,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e27b2816",
+   "metadata": {},
+   "source": [
+    "## Energy-Based Model (EBM)\n",
+    "Energy-Based Model (EBM) represents a fundamental shift from directly modeling probabilities to modeling the energy of a data point. Then, we convert the energies of data points into a valid distribution.\n",
+    "\n",
+    "Instead of trying to design a neural network that explicitly outputs a normalized probability distribution (which must sum to 1), we design a model that outputs a single scalar value called **energy** for a given input $x$. Borrowing from statistical physics, energy represents the state of a system. Low energy implies a stable, likely state. High energy implies an unstable, unlikely state.\n",
+    "\n",
+    "The Role of the Model: We define an energy function $E_\\theta(x)$, parameterized by a neural network, which maps an input $x$ to a scalar energy value:\n",
+    "    $$E_\\theta(x): \\mathbb{R}^D \\rightarrow \\mathbb{R}$$\n",
+    "\n",
+    "Ideally, the observed data (Real) should be assigned **low energy**, and noise/unobserved data (Fake) should be assigned **high energy**.\n",
+    "\n",
+    "### The Boltzmann Distribution\n",
+    "To utilize the energy function for generative tasks, we must convert the energy (scalar output) of the neural network into a valid probability distribution. We achieve this using the **Boltzmann Distribution**\n",
+    "\n",
+    "Given an energy function $E_\\theta(x)$, the probability density function $p_\\theta(x)$ is defined as:\n",
+    "\n",
+    "$$p_\\theta(x) = \\frac{\\exp\\left(-E_\\theta(x)\\right)}{Z(\\theta)}$$\n",
+    "\n",
+    "*  **The Gibbs Measure ($\\exp(-E_\\theta(x))$):** This term converts the energy into a non-negative value. Because of the negative sign, lower energy results in a higher unnormalized probability score.\n",
+    "*  **The Partition Function ($Z(\\theta)$):** This is the normalization constant required to ensure the probability distribution sums to 1.\n",
+    "\n",
+    "The core difficulty in EBMs lies in the partition function $Z(\\theta)$. It is obtained by **marginalizing** (integrating or summing) the unnormalized probabilities over the entire data space, which can be extremely difficult for high dimensional data space.\n",
+    "\n",
+    "$$Z(\\theta) = \\int_{x \\in \\mathcal{X}} \\exp\\left(-E_\\theta(x)\\right) dx$$\n",
+    "\n",
+    "* **Independence from Samples:** Note that $Z(\\theta)$ is a function of the model parameters $\\theta$, but it does **not** depend on any specific data point $x$ because it always sum over the entire data space.\n",
+    "\n",
+    "### Universality of Boltzmann Distribution\n",
+    "Instead of modelling the distribution directly, the reason we go through the two step process of first defining energy of data and then converting it into a distribution is because of the **Universality of the Boltzmann Distribution**.\n",
+    "\n",
+    "For almost any well-defined, strictly positive probability density $Q(x)$, there exists an energy function $f(x)$ such that $Q$ can be expressed as a Boltzmann distribution.\n",
+    "\n",
+    "This implies that EBMs are extremely expressive and can be applied to almost any data. By learning an appropriate energy function $E_\\theta(x)$, a neural network can theoretically approximate any complex distribution of data, without being restricted by specific architectural constraints required to ensure normalization (like in Autoregressive models or Flow-based models).\n",
+    "\n",
+    "> Note: Softmax, Gaussian, Bernulli, etc, are all spcecial cases of the Boltzmann distribution.\n",
+    "\n",
+    "### Data $\\to$ Energy $\\to$ Explicit Distribution\n",
+    "The ultimate workflow of learning an Energy-Based Model can be summarized as follows:\n",
+    "\n",
+    "1.  **The Objective:** We want to learn the true underlying distribution of a dataset, $p_{data}(x)$.\n",
+    "2.  **The Proxy:** We define a parameterized energy model $f_\\theta(x)$ (usually a deep neural network).\n",
+    "3.  **The Transformation:** We convert this energy model into an explicit distribution using the Boltzmann equation.\n",
+    "4.  **The Learning Process:** We adjust $\\theta$ to assign **low** energy for real samples and high energy for other points in the space ($x_{fake}$).\n",
+    "$$\\text{Data } x \\xrightarrow{\\text{Learn } f_\\theta} \\text{Energy } E(x) \\xrightarrow{\\text{Boltzmann}} \\text{Distribution } p(x)$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "252a9932",
+   "id": "ab8d6ada",
    "metadata": {},
    "outputs": [],
    "source": []
